--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+.cache
+dist
 Dio-SpreadFullstackDeveloper/typescript/node_modules
 /typescript/node_modules
 /node_modules
