--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,9 +10,11 @@
   "author": "jacsonsm",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.6.0",
     "parcel-bundler": "^1.3.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "typescript": "^4.6.4"
   }
 }
